# road_extraction_rebuilt

./: .gitignore  README.md  pyproject.toml
configs/: attention_unet_massachusetts_full.yaml  baseline_unet_massachusetts.yaml  baseline_unet_massachusetts_full.yaml  baseline_unet_massachusetts_smoke.yaml  baseline_unet_massachusetts_smoke_v2.yaml  ddu_net_full.yaml  ddu_net_full_stable.yaml  ddu_net_smoke.yaml  ddu_net_smoke_fp32.yaml  ddu_net_smoke_fp32_w4.yaml  ddu_net_smoke_lr1e4.yaml  dilated_baseline_unet_massachusetts_full.yaml  dlgu_net_improved_full.yaml  dlgu_net_massachusetts.yaml  dlgu_net_massachusetts_full.yaml  optimized_unet_massachusetts.yaml  residual_vanilla_unet_massachusetts_full.yaml  resnet34_unet_massachusetts_full.yaml  unetpp_massachusetts_full.yaml  vanilla_unet_massachusetts_full.yaml
experiments/attention_unet_massachusetts_full/: config.json  training_history.json
experiments/baseline_unet_massachusetts/: config.json  training_history.json
latex_report_20260315/: main.aux  main.out  main.tex  main.toc
latex_thesis_20260315/: main.aux  main.out  main.tex  main.toc
latex_thesis_xtu_template/: architecture_diagram_briefs.md  bu.aux  debug_lof_xtu_starttoc.aux  main.aux  main.bbl  main.blg  main.lof  main.lot  main.tex  main.toc  thesisv2.tex  xtusetup.tex  xtusetup_v2.tex  xtuthesis.cls
scripts/: analyze_project.py  benchmark_pipeline.py  compare_models.py  evaluate.py  explore_dataset.py  export_report_docx.py  fix_tiff.py  predict.py  prepare_massachusetts.py  resume_training.py  train.py  verify_dlgu.py
(+114 files in other folders)
